tulip-cli: use Tulip 2.2.0